deployment_definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    type: cache
spec:
  template:
    metadata:
      name: redis
      labels:
        type: cache
    spec:
      containers:
      - name: redis
        image: redis
  replicas: 3
  selector:
    matchLabels:
      type: cache
