pod_definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    type: cache
spec:
  containers:
  - name: redis
    image: redis
