pod_env_definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    type: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep"]
    args: ["2000"]
