pod_resources_definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    type: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    resources:
      requests:
        cpu: 1
        memory: "1Gi"
      limits:
        cpu: 2
        memory: "2Gi"
