pod_secruity_context_definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  labels:
    type: ubuntu
spec:
  securityContext: 
    runAsUser: 1000
  containers:
  - name: ubuntu
    image: ubuntu
    securityContext: 
      runAsUser: 1010
      capabilities:
        add: ["SYS_TIM"]
