pod_volumes_definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator
  labels:
          type: alpine
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh", "c"] 
    args: ["shuf -i 0-100 -n 1 >> /opt/number.out"]
    volumeMounts:
    - mountPath: /opt
      name: data-volume
volumes:
- name: data-volume
  hostPath:
    path: /data
    type: Directory
