ingress_definition.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellow-world-ingress
  namespace: hellow-world-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port: 
              number: 8282
